Fix: Increases heading-md on small devices

--- a/src/assets/css/input.css
+++ b/src/assets/css/input.css
@@ -21,7 +21,7 @@
         --text-lead-lh: 1.45;
         --text-heading-fs: 1.25rem;
         --text-heading-lh: 1.3;
-        --text-heading-md-fs: 1.25rem;
+        --text-heading-md-fs: 1.56rem;
         --text-heading-md-lh: 1.3;
         --text-heading-lg-fs: 1.56rem;
         --text-heading-lg-lh: 1.3;
